actualizacion del ides y ventana de proyectos

--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
 <body>
   <header>
     <div class="logos">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Logo_SENA_Colombia.png" alt="SENA">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/8/8a/Logo_MinTIC_Colombia.png" alt="MinTIC">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Emblem_of_the_International_Labour_Organization.svg" alt="OIT">
+      <img src="https://irp-cdn.multiscreensite.com/4b8552c4/dms3rep/multi/desktop/SENA_Logo-2179x2114.png" alt="SENA">
+      <img src="https://css.mintic.gov.co/mt/mintic/new/img/logo-MinTIC.png" alt="MinTIC">
+      <img src="https://th.bing.com/th/id/R.065f5121e4fb561f5f0d6c85e5b612ff?rik=pwwc1pLQb0rl3g&riu=http%3a%2f%2f1.bp.blogspot.com%2f_n2QlKNkbVSI%2fTJKEiPJEgjI%2fAAAAAAAAAHg%2fcKoaUbkfv88%2fs1600%2fLOGO_Oit.gif&ehk=N8F%2fm%2fGspFdZIO9M5CxDPOhOA1efXaD2NXq3LPYQHVA%3d&risl=&pid=ImgRaw&r=0" alt="OIT">
       <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Logo_de_la_Escuela_Normal_Superior_de_Corozal.png" alt="ENSC">
     </div>
   </header>
