--- a/proyectos.html
+++ b/proyectos.html
@@ -181,28 +181,28 @@
       { nombre:"CalmaBit", cat:"Bienestar", tech:["Web"], desc:"-", href:"CALMABIT/index.html" },
       { nombre:"ComerziApp", cat:"E-commerce", tech:["Web"], desc:"-", href:"COMERZIAPP/ComerziApp.html" },
       { nombre:"Kyros", cat:"Seguridad", tech:["Web"], desc:"-", href:"KYROS/index.html" },
-      { nombre:"PArqueo", cat:"Gestión", tech:["Web","JS"], desc:"sistema de parqueadero.", href:"PARQUEADERO/index.html" },
+      { nombre:"Parqueo", cat:"Gestión", tech:["Web","JS"], desc:"sistema de parqueadero.", href:"PARQUEADERO/index.html" },
       { nombre:"VetData", cat:"Gestión", tech:["Web"], desc:"Gestión de Veterinarias.", href:"vetdata-mvp/index.html" },
       { nombre:"CodeNova", cat:"E-DevTools", tech:["Web"], desc:"-", href:"WEB CODENOVA/index.html" },
       { nombre:"EduConect", cat:"EdTech", tech:["Web"], desc:"Planificación de clase y seguimiento a aprendizajes.", href:"WEB EDUCONECT/educonnect-platform.html" },
+      { nombre:"DataStock Solutions", cat:"Gestión", tech:["Web"], desc:"CRM sencillo para pymes escolares y servicios.", href:"https://datastock-solutions-bzlc.bolt.host/" },
+      { nombre:"Moblock Security", cat:"Seguridad", tech:["Web"], desc:"Colección de utilidades para pruebas y QA web.", href:"MOBLOCK/mocloksecurity.html" },
+      { nombre:"Safe Net", cat:"Movilidad/Logística", tech:["Web"], desc:"Gestión de reservas y traslados estudiantiles.", href:"SAFENET/index.html" },
+      { nombre:"Zendafleet", cat:"E-commerce", tech:["Web"], desc:"-", href:"ZENDAFLEET/index.html" },
+      { nombre:"Automatiza", cat:"E-commerce", tech:["Web"], desc:"Descripción breve del MVP.", href:"AUTOMATIZA/index.html" },
+      { nombre:"Smj Sistems", cat:"Gestión", tech:["Web"], desc:"Descripción breve del MVP.", href:"SMJ_SISTEMS/index.html" },
+      { nombre:"EduSoft", cat:"DevTools", tech:["Web"], desc:"Descripción breve del MVP.", href:"EDUSOFT/index.html" },
+      { nombre:"InnovaTech", cat:"-", tech:["Web"], desc:"-", href:"INNOVATECH/dash.html" },
+      { nombre:"Nucleo 9", cat:"-", tech:["Web"], desc:"Descripción breve del MVP.", href:"NUCLEO_9/index.html" },
+      { nombre:"SoftNova", cat:"E-commerce", tech:["Web"], desc:"Descripción breve del MVP.", href:"SOFTNOVA/index.html" },
+      { nombre:"CyberShield", cat:"Seguridad, antivirus", tech:["Web"], desc:"-", href:"CYBERSHIELD/index.html" },
+      { nombre:"SoftCare", cat:"DevTools", tech:["Web"], desc:"Descripción breve del MVP.", href:"SOFTCARE/index.html" },
+      { nombre:"SmartBudget Pro", cat:"Movilidad/Logística", tech:["Web"], desc:"Descripción breve del MVP.", href:"SMARTBUDGET PRO/index.html" },
+      { nombre:"InnovaSoft", cat:"Movilidad/Logística", tech:["Web"], desc:"Descripción breve del MVP.", href:"INNOVASOFT/innova.html" },
+      { nombre:"Guardian Digital", cat:"ciber seguridad", tech:["Web"], desc:"Descripción breve del MVP.", href:"GUARDIANDIGITAL/index.html" },
       
-      { nombre:"InnovaSoft", cat:"Gestión", tech:["Web"], desc:"CRM sencillo para pymes escolares y servicios.", href:"mvp/innovasoft/index.html" },
-      { nombre:"Bytewise S.A.S.", cat:"DevTools", tech:["Web"], desc:"Colección de utilidades para pruebas y QA web.", href:"mvp/bytewise/index.html" },
-      { nombre:"FullRide S.A.S.", cat:"Movilidad/Logística", tech:["Web"], desc:"Gestión de reservas y traslados estudiantiles.", href:"mvp/fullride/index.html" },
-
-      // Los siguientes son placeholders: renómbralos y cambia el href según tu lista final
-      { nombre:"Proyecto 13", cat:"EdTech", tech:["Web"], desc:"Descripción breve del MVP.", href:"mvp/proyecto-13/index.html" },
-      { nombre:"Proyecto 14", cat:"E-commerce", tech:["Web"], desc:"Descripción breve del MVP.", href:"mvp/proyecto-14/index.html" },
-      { nombre:"Proyecto 15", cat:"Gestión", tech:["Web"], desc:"Descripción breve del MVP.", href:"mvp/proyecto-15/index.html" },
-      { nombre:"Proyecto 16", cat:"DevTools", tech:["Web"], desc:"Descripción breve del MVP.", href:"mvp/proyecto-16/index.html" },
-      { nombre:"Proyecto 17", cat:"Salud/Bienestar", tech:["Web"], desc:"Descripción breve del MVP.", href:"mvp/proyecto-17/index.html" },
-      { nombre:"Proyecto 18", cat:"EdTech", tech:["Web"], desc:"Descripción breve del MVP.", href:"mvp/proyecto-18/index.html" },
-      { nombre:"Proyecto 19", cat:"E-commerce", tech:["Web"], desc:"Descripción breve del MVP.", href:"mvp/proyecto-19/index.html" },
-      { nombre:"Proyecto 20", cat:"Gestión", tech:["Web"], desc:"Descripción breve del MVP.", href:"mvp/proyecto-20/index.html" },
-      { nombre:"Proyecto 21", cat:"DevTools", tech:["Web"], desc:"Descripción breve del MVP.", href:"mvp/proyecto-21/index.html" },
-      { nombre:"Proyecto 22", cat:"Movilidad/Logística", tech:["Web"], desc:"Descripción breve del MVP.", href:"mvp/proyecto-22/index.html" },
-      { nombre:"Proyecto 23", cat:"Salud/Bienestar", tech:["Web"], desc:"Descripción breve del MVP.", href:"mvp/proyecto-23/index.html" },
-      { nombre:"Proyecto 24", cat:"Gestión", tech:["Web"], desc:"Descripción breve del MVP.", href:"mvp/proyecto-24/index.html" },
+      { nombre:"PREGUNTADOS NACIONAL", cat:"Salud/Bienestar", tech:["Web"], desc:"Descripción breve del MVP.", href:"PREGUNTADOS NACIONAL/index.html" },
+      { nombre:"RETO SENATIC", cat:"Gestión", tech:["Web"], desc:"Demuestra que eres el Mejor y compite por el podio!", href:"PREGUNTADOS/index.html" },
     ];
 
     const grid = document.getElementById('grid');
