--- a/proyectos.html
+++ b/proyectos.html
@@ -177,7 +177,7 @@
     // Puedes cambiar href por la ruta real del MVP de cada equipo.
     const proyectos = [
       { nombre:"Automata Solutions", cat:"Gestión", tech:["Web","JS"], desc:"Automatizaciones empresariales.", href:"AUTOMATA SOLUTIONS/index.html" },
-      { nombre:"VR Batallas por la paz", cat:"Realidad Virtual", tech:["Web","JS"], desc:"-", href:"BRVATALLAS/VR-Batallas-por-la-Paz.html" },
+      { nombre:"VR Batallas por la paz", cat:"Realidad Virtual", tech:["Web","JS"], desc:"-", href:"BR VATALLAS/VR-Batallas-por-la-Paz.html" },
       { nombre:"CalmaBit", cat:"Bienestar", tech:["Web"], desc:"-", href:"CALMABIT/index.html" },
       { nombre:"ComerziApp", cat:"E-commerce", tech:["Web"], desc:"-", href:"COMERZIAPP/ComerziApp.html" },
       { nombre:"Kyros", cat:"Seguridad", tech:["Web"], desc:"-", href:"KYROS/index.html" },
@@ -295,4 +295,5 @@
   </script>
 </body>
 </html>
+
 
