--- a/PREGUNTADOS NACIONAL/index.html
+++ b/PREGUNTADOS NACIONAL/index.html
@@ -626,7 +626,7 @@
         let answered = false;
         // CONFIGURACIÃ"N GITHUB GIST (Reemplaza estos valores)
         const GIST_ID = 'bbcdec288d1b0920a886dc7dffacb11d.js'; // Ejemplo: 'abc123def456'
-        const GITHUB_TOKEN = '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'; // Token de GitHub con permisos de gist
+        const GITHUB_TOKEN = 'TOKENSECRETO'; // Token de GitHub con permisos de gist
         const GIST_FILENAME = 'quiz-colombia-leaderboard.json';
         // Almacenamiento en memoria (reemplaza localStorage)
         // Almacenamiento en memoria
@@ -993,5 +993,6 @@
         }
     </script>
 </body>
+
 
 </html>
