--- a/proyectos.html
+++ b/proyectos.html
@@ -201,8 +201,8 @@
       { nombre:"InnovaSoft", cat:"Movilidad/Logística", tech:["Web"], desc:"Descripción breve del MVP.", href:"INNOVASOFT/innova.html" },
       { nombre:"Guardian Digital", cat:"ciber seguridad", tech:["Web"], desc:"Descripción breve del MVP.", href:"GUARDIANDIGITAL/index.html" },
       
-      { nombre:"PREGUNTADOS NACIONAL", cat:"Salud/Bienestar", tech:["Web"], desc:"Descripción breve del MVP.", href:"PREGUNTADOS NACIONAL/index.html" },
-      { nombre:"RETO SENATIC", cat:"Gestión", tech:["Web"], desc:"Demuestra que eres el Mejor y compite por el podio!", href:"PREGUNTADOS/index.html" },
+      { nombre:"RETO SENATIC", cat:"Salud/Bienestar", tech:["Web"], desc:"ATREVETE!! Demuestra que eres el Mejor y compite por el podio!", href:"PREGUNTADOS NACIONAL/index.html" },
+      
     ];
 
     const grid = document.getElementById('grid');
@@ -295,4 +295,5 @@
   </script>
 </body>
 </html>
+
 
